--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -14,6 +14,7 @@
         "babel-loader": "^7.1.5",
         "bootstrap": "^3.3.7",
         "bootstrap-datetime-picker": "^2.4.4",
+        "bootstrap-responsive-tabs": "^2.0.3",
         "bootstrap-social": "^5.1.1",
         "css-loader": "^0.28.11",
         "extract-text-webpack-plugin": "^3.0.2",
