--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -17,6 +17,8 @@
         "bootstrap-responsive-tabs": "^2.0.3",
         "bootstrap-social": "^5.1.1",
         "css-loader": "^0.28.11",
+        "datatables": "^1.10.18",
+        "datatables-bootstrap": "0.0.1",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^2.0.0",
         "font-awesome": "^4.7.0",
