--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -25,6 +25,7 @@
         "jquery": "^3.3.1",
         "popper.js": "^1.14.4",
         "style-loader": "^0.18.2",
+        "vis": "^4.21.0",
         "webpack": "^3.12.0"
     }
 }
