--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -16,6 +16,7 @@
         "bootstrap-datetime-picker": "^2.4.4",
         "bootstrap-responsive-tabs": "^2.0.3",
         "bootstrap-social": "^5.1.1",
+        "chosen-js": "^1.8.7",
         "css-loader": "^0.28.11",
         "datatables": "^1.10.18",
         "datatables-bootstrap": "0.0.1",
