Add support for side navigation pluggins
Add side navigation menu treatment

--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -17,13 +17,14 @@
         "bootstrap-responsive-tabs": "^2.0.3",
         "bootstrap-social": "^5.1.1",
         "chosen-js": "^1.8.7",
-        "css-loader": "^0.28.11",
+        "css-loader": "^2.1.1",
         "datatables": "^1.10.18",
         "datatables-bootstrap": "0.0.1",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^2.0.0",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
+        "metismenu": "^3.0.4",
         "ol": "^5.3.1",
         "popper.js": "^1.14.4",
         "style-loader": "^0.18.2",
