--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -20,10 +20,14 @@
         "css-loader": "^2.1.1",
         "datatables": "^1.10.18",
         "datatables-bootstrap": "0.0.1",
+        "datatables.net": "^1.10.19",
+        "datatables.net-buttons": "^1.5.6",
+        "datatables.net-select": "^1.3.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^2.0.0",
         "font-awesome": "^4.7.0",
-        "jquery": "^3.3.1",
+        "jquery": "^3.4.0",
+        "jszip": "^3.2.1",
         "metismenu": "^3.0.4",
         "ol": "^5.3.1",
         "popper.js": "^1.14.4",
