--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,7 +15,19 @@ RUN yum install -y postgresql \
     pytest \
     npm \
     chromium \
-    chromedriver
+    chromedriver \
+    centos-release-scl-rh \
+    centos-release-scl \
+    rh-ruby25 \
+    rh-ruby25-rubygem-bundler \
+    rh-ruby25-ruby-devel \
+    make \
+    gcc-c++ \
+    sqlite-devel \
+    which \
+    p7zip
+
+RUN scl enable rh-ruby25 bash
 
 RUN pip3 install pytest-cov \
     termcolor \
