--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -1,38 +1,39 @@
 {
-    "name": "vboa",
-    "version": "0.1.0",
-    "description": "Visualization tool for Bussiness Operation Analysis",
-    "scripts": {
-        "build": "webpack -p --progress --config webpack.config.js",
-        "dev-build": "webpack --progress -d --config webpack.config.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "watch": "webpack --progress -d --config webpack.config.js --watch"
-    },
-    "author": "Daniel Brosnan Blázquez",
-    "dependencies": {
-        "babel-core": "^6.26.3",
-        "babel-loader": "^7.1.5",
-        "bootstrap": "^3.3.7",
-        "bootstrap-datetime-picker": "^2.4.4",
-        "bootstrap-responsive-tabs": "^2.0.3",
-        "bootstrap-social": "^5.1.1",
-        "chosen-js": "^1.8.7",
-        "css-loader": "^2.1.1",
-        "datatables": "^1.10.18",
-        "datatables-bootstrap": "0.0.1",
-        "datatables.net": "^1.10.19",
-        "datatables.net-buttons": "^1.5.6",
-        "datatables.net-select": "^1.3.0",
-        "extract-text-webpack-plugin": "^3.0.2",
-        "file-loader": "^2.0.0",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.4.0",
-        "jszip": "^3.2.1",
-        "metismenu": "^3.0.4",
-        "ol": "^5.3.1",
-        "popper.js": "^1.14.4",
-        "style-loader": "^0.18.2",
-        "vis": "4.20.0",
-        "webpack": "^3.12.0"
-    }
+  "name": "vboa",
+  "version": "0.1.0",
+  "description": "Visualization tool for Bussiness Operation Analysis",
+  "scripts": {
+    "build": "webpack -p --progress --config webpack.config.js",
+    "dev-build": "webpack --progress -d --config webpack.config.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --progress -d --config webpack.config.js --watch"
+  },
+  "author": "Daniel Brosnan Blázquez",
+  "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "bootstrap": "^3.3.7",
+    "bootstrap-datetime-picker": "^2.4.4",
+    "bootstrap-progressbar": "^0.9.0",
+    "bootstrap-responsive-tabs": "^2.0.3",
+    "bootstrap-social": "^5.1.1",
+    "chosen-js": "^1.8.7",
+    "css-loader": "^2.1.1",
+    "datatables": "^1.10.18",
+    "datatables-bootstrap": "0.0.1",
+    "datatables.net": "^1.10.19",
+    "datatables.net-buttons": "^1.5.6",
+    "datatables.net-select": "^1.3.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^2.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.0",
+    "jszip": "^3.2.1",
+    "metismenu": "^3.0.4",
+    "ol": "^5.3.1",
+    "popper.js": "^1.14.4",
+    "style-loader": "^0.18.2",
+    "vis": "4.20.0",
+    "webpack": "^3.12.0"
+  }
 }
