Correct the insertion of data folders

--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -1,4 +1,4 @@
 graft vboa/templates
-include vboa/static/dist/bundle.js
-include vboa/static/dist/styles.css
+graft vboa/static/dist
+graft vboa/static/css
 graft vboa/static/html
