Add cron activities

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -24,7 +24,8 @@ RUN yum install -y postgresql \
     which \
     p7zip \
     unzip \
-    less
+    less \
+    cronie
 
 RUN yum install -y rh-ruby25 \
     rh-ruby25-rubygem-bundler \
@@ -80,3 +81,7 @@ ENV ORC_DATABASE_NAME /orc/orc_inventory
 ENV ORC_DB_ADAPTER sqlite3
 ENV ORC_DATABASE_USER root
 ENV ORC_DATABASE_PASSWORD 1mysql
+
+# Copy the environment variables to a file for later use of cron
+RUN declare -p | grep -Ev 'BASHOPTS|BASH_VERSINFO|EUID|PPID|SHELLOPTS|UID' > /container.env
+
