--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -33,6 +33,7 @@
     "ol": "^5.3.1",
     "popper.js": "^1.14.4",
     "style-loader": "^0.18.2",
+    "toastr": "^2.1.4",
     "vis": "4.20.0",
     "webpack": "^3.12.0"
   }
