--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -44,6 +44,7 @@ RUN mkdir /log
 RUN mkdir /scripts
 RUN mkdir /resources_path
 RUN mkdir /datamodel
+RUN mkdir /rboa_archive
 
 # Create folders for ORC
 RUN mkdir /orc_packages
@@ -64,6 +65,7 @@ ENV FLASK_ENV development
 ENV LC_ALL en_US.utf-8
 ENV LANG en_US.utf-8
 ENV PATH="${PATH}:/scripts"
+ENV RBOA_ARCHIVE_PATH="/rboa_archive"
 
 # expose port
 EXPOSE 5000
