--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -24,6 +24,7 @@
     "datatables.net": "^1.10.19",
     "datatables.net-buttons": "^1.5.6",
     "datatables.net-select": "^1.3.0",
+    "datatables.net-select-dt": "^1.3.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "font-awesome": "^4.7.0",
