--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -31,7 +31,8 @@ RUN yum install -y postgresql-devel \
     p7zip \
     unzip \
     less \
-    cronie
+    cronie \
+    texlive*
 
 RUN yum install -y rh-ruby25 \
     rh-ruby25-rubygem-bundler \
