--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -32,7 +32,9 @@ RUN yum install -y postgresql-devel \
     unzip \
     less \
     cronie \
-    texlive*
+    texlive* \
+    libcurl \
+    libcurl-devel
 
 RUN yum install -y rh-ruby25 \
     rh-ruby25-rubygem-bundler \
