--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -17,6 +17,8 @@
     "bootstrap-progressbar": "^0.9.0",
     "bootstrap-responsive-tabs": "^2.0.3",
     "bootstrap-social": "^5.1.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-labels": "^1.1.0",
     "chosen-js": "^1.8.7",
     "css-loader": "^2.1.1",
     "datatables": "^1.10.18",
