--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -32,12 +32,16 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "jszip": "^3.2.1",
+    "keycharm": "^0.3.1",
     "metismenu": "^3.0.4",
     "ol": "^5.3.1",
     "popper.js": "^1.14.4",
     "style-loader": "^0.18.2",
     "toastr": "^2.1.4",
-    "vis": "4.20.0",
+    "vis-data": "^6.4.0",
+    "vis-network": "^7.3.5",
+    "vis-timeline": "^7.1.3",
+    "vis-util": "^3.0.0",
     "webpack": "^3.12.0"
   }
 }
