--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -34,6 +34,7 @@
     "jszip": "^3.2.1",
     "keycharm": "^0.3.1",
     "metismenu": "^3.0.4",
+    "moment": "^2.24.0",
     "ol": "^5.3.1",
     "popper.js": "^1.14.4",
     "style-loader": "^0.18.2",
