--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -12,8 +12,7 @@ RUN useradd -m -o -r -u $UID_HOST_USER $HOST_USER
 
 RUN yum install -y epel-release
 
-RUN yum install -y postgresql-devel \
-    python36 \
+RUN yum install -y python36 \
     python36-pip \
     python36-tkinter \
     gcc \
@@ -38,9 +37,11 @@ RUN yum install -y postgresql-devel \
 
 RUN yum install -y rh-ruby25 \
     rh-ruby25-rubygem-bundler \
-    rh-ruby25-ruby-devel
+    rh-ruby25-ruby-devel \
+    rh-postgresql10-postgresql-devel
 
-RUN pip3 install pytest-cov \
+RUN pip3 install wheel \
+    pytest-cov \
     termcolor \
     coverage \
     before_after \
