--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "vboa",
-  "version": "0.1.0",
-  "description": "Visualization tool for Bussiness Operation Analysis",
-  "scripts": {
-    "build": "webpack -p --progress --config webpack.config.js",
-    "dev-build": "webpack --progress -d --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --progress -d --config webpack.config.js --watch"
-  },
-  "author": "Daniel Brosnan Blázquez",
-  "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "bootstrap": "^3.3.7",
-    "bootstrap-datetime-picker": "^2.4.4",
-    "bootstrap-progressbar": "^0.9.0",
-    "bootstrap-responsive-tabs": "^2.0.3",
-    "bootstrap-social": "^5.1.1",
-    "chart.js": "^2.9.3",
-    "chartjs-plugin-labels": "^1.1.0",
-    "chosen-js": "^1.8.7",
-    "css-loader": "^2.1.1",
-    "datatables": "^1.10.18",
-    "datatables-bootstrap": "0.0.1",
-    "datatables.net": "^1.10.19",
-    "datatables.net-buttons": "^1.5.6",
-    "datatables.net-select": "^1.3.0",
-    "datatables.net-select-dt": "^1.3.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^2.0.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.4.0",
-    "jszip": "^3.2.1",
-    "keycharm": "^0.3.1",
-    "metismenu": "^3.0.4",
-    "moment": "^2.24.0",
-    "ol": "^5.3.1",
-    "popper.js": "^1.14.4",
-    "style-loader": "^0.18.2",
-    "toastr": "^2.1.4",
-    "vis-data": "^6.4.0",
-    "vis-network": "^7.3.5",
-    "vis-timeline": "^7.1.3",
-    "vis-util": "^3.0.0",
-    "webpack": "^3.12.0"
-  }
+    "name": "vboa",
+    "version": "0.1.0",
+    "description": "Visualization tool for Bussiness Operation Analysis",
+    "scripts": {
+        "build": "webpack -p --progress --config webpack.config.js",
+        "dev-build": "webpack --progress -d --config webpack.config.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "watch": "webpack --progress -d --config webpack.config.js --watch"
+    },
+    "author": "Daniel Brosnan Blázquez",
+    "dependencies": {
+        "@egjs/hammerjs": "2.0.17",
+        "babel-core": "6.26.3",
+        "babel-loader": "7.1.5",
+        "bootstrap": "3.4.1",
+        "bootstrap-datetime-picker": "2.4.4",
+        "bootstrap-progressbar": "0.9.0",
+        "bootstrap-responsive-tabs": "2.0.3",
+        "bootstrap-social": "5.1.1",
+        "chart.js": "2.9.3",
+        "chartjs-plugin-labels": "1.1.0",
+        "chosen-js": "1.8.7",
+        "css-loader": "2.1.1",
+        "datatables": "1.10.18",
+        "datatables-bootstrap": "0.0.1",
+        "datatables.net": "1.10.20",
+        "datatables.net-buttons": "1.6.1",
+        "datatables.net-select": "1.3.1",
+        "datatables.net-select-dt": "1.3.1",
+        "extract-text-webpack-plugin": "3.0.2",
+        "file-loader": "2.0.0",
+        "font-awesome": "4.7.0",
+        "jquery": "3.4.1",
+        "jszip": "3.2.2",
+        "keycharm": "0.3.1",
+        "metismenu": "3.0.5",
+        "moment": "2.24.0",
+        "ol": "5.3.3",
+        "popper.js": "1.16.1",
+        "propagating-hammerjs": "1.4.0",
+        "style-loader": "0.18.2",
+        "timsort": "0.3.0",
+        "toastr": "2.1.4",
+        "vis-data": "6.5.0",
+        "vis-network": "7.4.0",
+        "vis-timeline": "7.3.1",
+        "webpack": "3.12.0"
+    }
 }
