--- a/Dockerfile.pkg
+++ b/Dockerfile.pkg
@@ -10,5 +10,6 @@ RUN yum install -y python36 \
     python36-pip \
     python36-tkinter \
     gcc \
-    python36-devel
+    python36-devel \
+    npm
     
