--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -3,8 +3,7 @@
     "version": "0.1.0",
     "description": "Visualization tool for Bussiness Operation Analysis",
     "scripts": {
-        "build": "webpack -p --progress --config webpack.config.js",
-        "dev-build": "webpack --progress -d --config webpack.config.js",
+        "build": "webpack --progress -d --config webpack.config.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "watch": "webpack --progress -d --config webpack.config.js --watch"
     },
