Remove environmental variable to fix the host of the DDBB. This is done when running the container.
Add flask web server for SSL connection

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,7 +5,6 @@ MAINTAINER Daniel Brosnan Blázquez <daniel.brosnan@deimos-space.com>
 ARG FLASK_APP
 ARG HOST_USER
 ARG UID_HOST_USER
-ARG DATABASE_CONTAINER
 
 USER root
 
@@ -66,7 +65,7 @@ RUN mkdir /minarc_root
 RUN mkdir /inputs
 
 # Change ownership to the $HOST_USER
-RUN chown $HOST_USER /log /scripts /resources_path /datamodel /rboa_archive /orc_packages /minarc_root /inputs /orc
+RUN chown -R $HOST_USER /log /scripts /resources_path /datamodel /rboa_archive /orc_packages /minarc_root /inputs /orc
 
 USER $HOST_USER
 
@@ -78,7 +77,6 @@ RUN ln -s /eboa/src/rboa/reporting/rboa_reporting.py /scripts/rboa_reporting.py
 RUN ln -s /eboa/src/sboa/scheduler/boa_scheduler.py /scripts/boa_scheduler.py
 RUN ln -s /eboa/src/sboa/scheduler/boa_execute_triggering.py /scripts/boa_execute_triggering.py
 RUN ln -s /vboa/src/scripts/start_flask.sh /scripts/start_flask.sh
-RUN ln -s /vboa/src/scripts/start_gunicorn.sh /scripts/start_gunicorn.sh
 
 # Environment Variables for BOA
 ENV EBOA_RESOURCES_PATH /resources_path
@@ -90,8 +88,6 @@ ENV LC_ALL en_US.utf-8
 ENV LANG en_US.utf-8
 ENV PATH="${PATH}:/scripts"
 ENV RBOA_ARCHIVE_PATH="/rboa_archive"
-ENV EBOA_DDBB_HOST $DATABASE_CONTAINER
-ENV SBOA_DDBB_HOST $DATABASE_CONTAINER
 
 # expose port
 EXPOSE 5000
@@ -102,12 +98,10 @@ ENV MINARC_ARCHIVE_ERROR /minarc_root/.errors
 ENV MINARC_DATABASE_NAME minarc_orc_db
 ENV MINARC_DB_ADAPTER postgresql
 ENV MINARC_DATABASE_USER minarc_orc
-ENV MINARC_DATABASE_HOST $DATABASE_CONTAINER
 ENV ORC_TMP /orc/tmp
 ENV ORC_DATABASE_NAME minarc_orc_db
 ENV ORC_DB_ADAPTER postgresql
 ENV ORC_DATABASE_USER minarc_orc
-ENV ORC_DATABASE_HOST $DATABASE_CONTAINER
 
 # Copy the environment variables to a file for later use of cron
 RUN declare -p | grep -Ev 'BASHOPTS|BASH_VERSINFO|EUID|PPID|SHELLOPTS|UID' > /resources_path/container.env
