--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -4,7 +4,7 @@
   "description": "Visualization tool for Bussiness Operation Analysis",
   "scripts": {
     "build": "webpack -p --progress --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "webpack --progress --config webpack.config.js --watch",
     "watch": "webpack -p --progress --config webpack.config.js --watch"
   },
   "author": "Daniel Brosnan Blázquez",
