Move packages from dockerfile to the setup file
Correct usage of the path to the certificates

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -43,16 +43,7 @@ RUN yum install -y rh-ruby25 \
     rh-ruby25-ruby-devel \
     rh-postgresql10-postgresql-devel
 
-RUN pip3 install wheel \
-    pytest-cov \
-    termcolor \
-    coverage \
-    before_after \
-    Sphinx \
-    Flask \
-    gunicorn \
-    flask-security-too \
-    bcrypt
+RUN pip3 install wheel
     
 # Create folders for BOA
 RUN mkdir /log
