--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -18,6 +18,7 @@
     "bootstrap-progressbar": "0.9.0",
     "bootstrap-responsive-tabs": "2.0.3",
     "bootstrap-social": "5.1.1",
+    "cesium": "1.56.1",
     "chart.js": "2.9.3",
     "chartjs-plugin-labels": "1.1.0",
     "chosen-js": "1.8.7",
@@ -37,7 +38,8 @@
     "mathjs": "^9.3.2",
     "metismenu": "3.0.5",
     "moment": "2.24.0",
-    "ol": "6.9.0",
+    "ol": "5.3.3",
+    "olcs": "2.9.0",
     "popper.js": "1.16.1",
     "propagating-hammerjs": "1.4.0",
     "style-loader": "0.18.2",
