--- a/src/vboa/static/package.json
+++ b/src/vboa/static/package.json
@@ -38,6 +38,7 @@
     "mathjs": "^9.3.2",
     "metismenu": "3.0.5",
     "moment": "2.24.0",
+    "nouislider": "^15.6.0",
     "ol": "5.3.3",
     "olcs": "2.9.0",
     "popper.js": "1.16.1",
