Add script to execute ingestion from the BOA scheduler to the production and development environments

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -71,6 +71,7 @@ USER boa
 # Install scripts
 RUN ln -s /eboa/src/eboa/triggering/eboa_triggering.py /scripts/eboa_triggering.py
 RUN ln -s /eboa/src/eboa/ingestion/eboa_ingestion.py /scripts/eboa_ingestion.py
+RUN ln -s /eboa/src/eboa/ingestion/eboa_scheduler_ingestion.py /scripts/eboa_scheduler_ingestion.py
 RUN ln -s /eboa/src/rboa/triggering/rboa_triggering.py /scripts/rboa_triggering.py
 RUN ln -s /eboa/src/rboa/reporting/rboa_reporting.py /scripts/rboa_reporting.py
 RUN ln -s /eboa/src/sboa/scheduler/boa_scheduler.py /scripts/boa_scheduler.py
