workaround to generate_boa_packages.sh which failed the command due to EOL / unavailability of mirrorlist URL by centos: yum install -y epel-release

--- a/Dockerfile.pkg
+++ b/Dockerfile.pkg
@@ -4,6 +4,11 @@ MAINTAINER Daniel Brosnan Blázquez <daniel.brosnan@deimos-space.com>
 
 ARG FLASK_APP
 
+# https://serverfault.com/questions/1161816/mirrorlist-centos-org-no-longer-resolve
+RUN sed -i s/mirror.centos.org/vault.centos.org/g /etc/yum.repos.d/*.repo
+RUN sed -i s/^#.*baseurl=http/baseurl=http/g /etc/yum.repos.d/*.repo
+RUN sed -i s/^mirrorlist=http/#mirrorlist=http/g /etc/yum.repos.d/*.repo
+
 RUN yum install -y epel-release
 
 RUN yum install -y python36 \
