--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -9,6 +9,11 @@ USER root
 
 RUN useradd -m -o -r -u $UID_HOST_USER boa
 
+# https://serverfault.com/questions/1161816/mirrorlist-centos-org-no-longer-resolve
+RUN sed -i s/mirror.centos.org/vault.centos.org/g /etc/yum.repos.d/*.repo
+RUN sed -i s/^#.*baseurl=http/baseurl=http/g /etc/yum.repos.d/*.repo
+RUN sed -i s/^mirrorlist=http/#mirrorlist=http/g /etc/yum.repos.d/*.repo
+
 RUN yum install -y epel-release
 
 RUN yum install -y python36 \
