Update VBOA version to 1.0.7
Remove texlive package from BOA image (only available in the development environment for EBOA and VBOA)

Add path to python binaries for root

Add path to ruby binaries for root

Add path to BOA gems for root

Add installation of ORC in the development environment script

--- a/Dockerfile.build.boa
+++ b/Dockerfile.build.boa
@@ -26,7 +26,6 @@ RUN yum install --allowerasing -y python3 \
     unzip \
     less \
     cronie \
-    texlive* \
     libcurl \
     libcurl-devel \
     postgresql-devel \
@@ -81,8 +80,14 @@ RUN mkdir /usr/local/python-packages
 RUN chown -R boa:boa /usr/local/python-packages
 ENV PYTHONPATH=/usr/local/python-packages
 
-# Add path to the scripts installed by pip in the home of the boa user to PATH
-ENV PATH="${PATH}:/usr/local/python-packages/bin"
+# Add path to the binaries installed by pip to PATH
+ENV PATH="/usr/local/python-packages/bin:${PATH}"
+
+# Add path to the binaries installed by ruby in the home of the boa user to PATH
+ENV PATH="/home/boa/bin:${PATH}"
+
+# Add path to the gems installed by ruby in the home of the boa user to GEM_PATH
+ENV GEM_PATH="/home/boa/.local/share/gem/ruby:"
 
 USER boa
 
