--- a/compose_tboa_dev.yml
+++ b/compose_tboa_dev.yml
@@ -27,6 +27,7 @@ services:
       ports:
          - ${TBOA_PORT}:5001
       restart        : always
+      shm_size: 512M
       volumes:
          - ${TBOA_DEVELOPMENT_PATH}:/tboa
       networks:
